Separacion de capas, implementacion busqueda y metodos de habitacion

--- a/ReservasHotel/ReservasHotel.Presentacion/Views/Cliente/CrearCliente.cshtml
+++ b/ReservasHotel/ReservasHotel.Presentacion/Views/Cliente/CrearCliente.cshtml
@@ -1,4 +1,4 @@
-﻿@model ReservasHotel.Presentacion.Models.Cliente
+﻿@model ReservasHotel.Persistencia.Entidades.Cliente
 
 @{
     ViewBag.Title = "CrearCliente";
@@ -6,7 +6,6 @@
 }
 
 <h2>CrearCliente</h2>
-
 
 @using (Html.BeginForm()) 
 {
