--- a/ReservasHotel/ReservasHotel.Presentacion/Views/Cliente/EditarCliente.cshtml
+++ b/ReservasHotel/ReservasHotel.Presentacion/Views/Cliente/EditarCliente.cshtml
@@ -1,4 +1,4 @@
-﻿@model ReservasHotel.Presentacion.Models.Cliente
+﻿@model ReservasHotel.Persistencia.Entidades.Cliente
 
 @{
     ViewBag.Title = "EditarCliente";
