--- a/ReservasHotel/ReservasHotel.Presentacion/Views/Shared/_Layout.cshtml
+++ b/ReservasHotel/ReservasHotel.Presentacion/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Clientes", "Index", "Cliente")</li>
+                    <li>@Html.ActionLink("Habitaciones", "ListarHabitaciones", "Habitacion")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
