--- a/ReservasHotel/ReservasHotel.Presentacion/Views/Cliente/Index.cshtml
+++ b/ReservasHotel/ReservasHotel.Presentacion/Views/Cliente/Index.cshtml
@@ -71,7 +71,7 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "EditarCliente", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Ver Detalle", "VerDetalleCliente", new { id = item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
